# backtesting-engine

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  backtesting_project_structure.txt  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_settings.example.txt  sync_from_structure.sh
.github/workflows/: ci.yml
bench/: run_benchmarks.py
config/costs/: costs.yaml
docs/: github_links_guide.md  tooling_explicacion.md
notebooks/: 00_prueba_entorno.ipynb.ipynb  01_research_barridas.ipynb  barridas_apertura.ipynb
numba/: __init__.py
research/intraday_mean_reversion/: README.md  intraday_mean_reversion_research.py  intraday_mean_reversion_research_params.txt  market_regime.py
research/microstructure/: README.md  __init__.py  optimizer_strategies.py  session_loader.py  study_opening_sweeps.py  study_opening_sweeps_gridsearch.py  study_opening_sweeps_inputs.txt  study_opening_sweeps_v1.py  study_opening_sweeps_v2.py  study_opening_sweeps_v3.py  study_opening_sweeps_v4.py
research/ml/: build_ml_dataset_ndxm.py  train_directional_model_ndxm.py
src/: __init__.py
src/analytics/: __init__.py  backtest_output.py  collectors.py  exporters.py  metrics.py  plots.py  reporting.py  trade_plots.py
src/config/: data_roots.example.json  paths.py
src/costs/: README.md  __init__.py  cost_config.py  cost_model.py
src/data/: bars1m_to_excel.py  cache_adapter.py  csv_1m_to_npz.py  data_to_parquet.py  data_utils.py  feeds.py  parquet_to_npz.py
src/engine/: core.py  events.py  execution.py  registries.py
src/pipeline/: backtest_runner.py  batch_scheduler.py  (+2 more)
tests/: conftest.py  test_backtest_output_serialization.py  test_backtest_resume_equity.py  test_cache_adapter.py  test_contracts.py  test_cost_model.py  test_data_to_parquet.py  test_data_validation.py  test_engine_costs.py  test_events.py  test_execution.py  test_feeds.py  test_main_config.py  test_opening_sweep_v4.py  test_order_validation.py  test_paths_defaults.py  test_reporting.py  test_risk.py  test_timing.py  test_trade_level_stats.py  test_trades_dashboard.py  test_validations.py
tools/: coverage_report.py
(+53 files in other folders)
